Changelog
=========

1.0.4 (unreleased)
------------------

- Implement responsive footer according the latest ftw.theming implementation.
  [mathias.leimgruber]

- Translate the lawgiver action group to be used in German workflow specifications.
  [mbaechtold]


1.0.3 (2015-09-02)
------------------

- Define resources for ftw.theming.
  [Kevin bieri]


1.0.2 (2014-12-23)
------------------

- Do not redirect to manage-footer view after modifying regular portlet
  managers.
  [mathias.leimgruber]


1.0.1 (2014-12-02)
------------------

- Stay on the footer management view after modifying the portlet blacklist status.
  [mbaechtold]


1.0.0 (2013-09-24)
------------------

- Initial release