@@ -1,118 +1,97 @@
-$footer-background-color: $gray-dark !default;
-$footer-font-size: $font-size-base !default;
-$footer-link-font-weight: $link-font-weight !default;
-$footer-link-decoration: $link-decoration !default;
-$footer-link-hover-decoration: $link-hover-decoration !default;
+$footer-background-color: $color-secondary !default;
 
-@include declare-variables(footer-background-color, footer-font-size, footer-link-decoration);
+@include declare-variables(footer-background-color);
 
 #footer {
   @include clearfix;
+  background: $footer-background-color;
+  margin-top: -$padding-vertical * 10;
+}
+
+#columns {
+  position: relative;
+  z-index: 1;
 }
 
 #ftw-footer {
   @include row;
-
-  background: $footer-background-color;
-
   @include auto-text-color($footer-background-color);
+  @include clearfix();
+  max-width: $max-width-page;
+  margin: 0 auto;
+  float: none;
+  padding-top: $padding-vertical * 12;
 
-  font-size: $footer-font-size;
-
-  a {
-    text-decoration: $footer-link-decoration;
-    font-weight: $footer-link-font-weight;
-
-    &:hover {
-      text-decoration: $footer-link-hover-decoration;
-    }
-  }
-
-  .portletItem {
-    margin-left: 0;
-  }
-
-  .column {
-    @include cell;
-
-    @include gridwidth(16);
-
-    @include gridposition(0);
-
-    clear: both;
-
-    @include screen-small {
-      &#footer-column-1 {
-        @include gridposition(0);
-
-        @include gridwidth(8);
-
-        clear: none;
-      }
-
-      &#footer-column-2 {
-        @include gridposition(8);
-
-        @include gridwidth(8);
-
-        clear: none;
-      }
-
-      &#footer-column-3 {
-        @include gridposition(0);
-
-        @include gridwidth(8);
-
-        clear: both;
-      }
-
-      &#footer-column-4 {
-        @include gridposition(8);
-
-        @include gridwidth(8);
-
-        clear: none;
-      }
-    }
-
-
-    @include screen-large {
-      &#footer-column-1 {
-        @include gridposition(0);
-
-        @include gridwidth(4);
-
-        clear: none;
-      }
-
-      &#footer-column-2 {
-        @include gridposition(4);
-
-        @include gridwidth(4);
-
-        clear: none;
-      }
-
-      &#footer-column-3 {
-        @include gridposition(8);
-
-        @include gridwidth(4);
-
-        clear: none;
-      }
-
-      &#footer-column-4 {
-        @include gridposition(12);
-
-        @include gridwidth(4);
-
-        clear: none;
-      }
-    }
+  .portlet {
+    @include reset-definition-list();
   }
 
   .managePortletsLink {
+    @include cell();
+    @include gridwidth(16);
+    @include gridposition(0);
     clear: both;
-    text-align: center;
+    > a {
+      @include button($color-primary);
+    }
+  }
+}
+
+[id^="footer-column-"] {
+  @include cell;
+  @include gridwidth(16);
+  @include gridposition(0);
+  clear: both;
+}
+
+@include screen-small {
+  #footer-column-1 {
+    @include gridposition(0);
+    @include gridwidth(8);
+    clear: none;
+  }
+
+  #footer-column-2 {
+    @include gridposition(8);
+    @include gridwidth(8);
+    clear: none;
+  }
+
+  #footer-column-3 {
+    @include gridposition(0);
+    @include gridwidth(8);
+    clear: both;
+  }
+
+  #footer-column-4 {
+    @include gridposition(8);
+    @include gridwidth(8);
+    clear: none;
+  }
+}
+
+@include screen-large {
+  #footer-column-1 {
+    @include gridposition(0);
+    @include gridwidth(4);
+    clear: none;
+  }
+
+  #footer-column-2 {
+    @include gridposition(4);
+    @include gridwidth(4);
+    clear: none;
+  }
+
+  #footer-column-3 {
+    @include gridposition(8);
+    @include gridwidth(4);
+    clear: none;
+  }
+
+  #footer-column-4 {
+    @include gridposition(12);
+    @include gridwidth(4);
+    clear: none;
   }
 }
