@@ -4,6 +4,9 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
+- Adapt footer styling based on ftw.theming rework.
+  [Kevin Bieri]
+
 - Implement responsive footer according the latest ftw.theming implementation.
   [mathias.leimgruber]
 
